--- a/IR-Assignment1/IR-Assignment1/IR-Assignment1.vcxproj.filters
+++ b/IR-Assignment1/IR-Assignment1/IR-Assignment1.vcxproj.filters
@@ -35,4 +35,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="new_file.txt" />
+  </ItemGroup>
 </Project>
